--- a/gbh/index.html
+++ b/gbh/index.html
@@ -113,13 +113,13 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>中国地质大学（北京）研究生——水利工程 2015-2018</h3>
+                        <h3>中国地质大学（北京）——水利工程（研究生） 2015-2018</h3>
                         <p>
                             研究生期间在老师的指导下进行水文经济方面的研究工作。
                         </p>
                     </li>
 					 <li>
-                        <h3>防灾科技学院——地下水科学与工程（本科） 2011-2015</h3>
+                        <h3>防灾科技学院——地下水科学与工程（本科）2011-2015</h3>
                         <p>
                             在四年专业的学习中有了较扎实的水文地质专业知识，培养自己的自学能力。业余时间学习C/C++、NodeJS、Javascript、CSS/HTML等编程知识。
                         </p>
