--- a/gbh/index.html
+++ b/gbh/index.html
@@ -17,12 +17,12 @@
         <div class="side">
             <div class="me">
                 <div class="portrait"></div>
-                <div class="remodal remodal-img" data-remodal-id="portrait-modal">
+                <!--<div class="remodal remodal-img" data-remodal-id="portrait-modal">
                     <h3>请输入图片URL地址：</h3>
                     <br/>
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-                </div>
+                </div>-->
                 <h1 id="username" >古彬华</h1>
                 <h4 id="persona-tag" >水文地质/环境地质/互联网</h4>
             </div>
@@ -48,9 +48,9 @@
                         <label class="left-label">手机</label><span class="label-value">18911767302</span></li>
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">gubinhua123@163.com</span></li>
-                    <li>
+                    <!--<li>
                         <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
-                    <li>
+                    <li>-->
                         <label class="left-label">Github</label><span class="label-value">github.com/gubinhua</span></li>
                 </ul>
             </div>
@@ -121,7 +121,7 @@
 					 <li>
                         <h3>防灾科技学院——地下水科学与工程（本科）2011-2015</h3>
                         <p>
-                            在四年专业的学习中有了较扎实的水文地质专业知识，培养自己的自学能力。业余时间学习C/C++、NodeJS、Javascript、CSS/HTML等编程知识。
+                            在四年专业的学习中有了较扎实的水文地质专业知识，培养自己的自学能力。课余时间学习C/C++、NodeJS、Javascript、CSS/HTML等编程知识。
                         </p>
                     </li>
                 </ul>
@@ -192,7 +192,7 @@
 						我是一个善于观察思考的人，喜欢向人了解和接触些新鲜东西。对编程有浓厚的兴趣，自学了C/C++、javascript、NodeJS、css/html等编程语言知识，并能运用这些知识帮助 自己和同学解决一些实际问题。</p>
 					</li>
 					<li>
-				<p>生活中为人友善平易近人，注重团队沟通与协助，四年来锻炼出了良好的人际交往能力和分析总结能力并将其应用到专业的学习上，取得很好的效果。业余时间喜欢游泳、打网球等锻炼身体。</p></li>
+				<p>生活中为人友善平易近人，注重团队沟通与协助，大学以来锻炼出了良好的人际交往能力和分析总结能力并将其应用到专业的学习上，取得很好的效果。业余时间喜欢游泳、打网球等锻炼身体。</p></li>
 				<li>
 				<p>心态积极乐观，暑期野外工作中虽条件艰苦、工作繁重，但仍抱着学习技能强身健体的心态，每天以充沛的精力投入到实习工作当中。
                 </p></li>
