2017年9月28日修改

--- a/gbh/index.html
+++ b/gbh/index.html
@@ -17,27 +17,32 @@
         <div class="side">
             <div class="me">
                 <div class="portrait"></div>
-                <!--<div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>请输入图片URL地址：</h3>
-                    <br/>
-                    <input type="text" id="avatar-url">
-                    <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-                </div>-->
                 <h1 id="username" >古彬华</h1>
-                <h4 id="persona-tag" >水文地质/环境地质/互联网</h4>
+                <h4 id="persona-tag" >水文地质/环境地质</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">古彬华</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">古彬华</span>
+					</li>
+					<li>
+                        <label class="left-label">籍贯</label><span class="label-value">江西省</span>
+					</li>
+                 
                     <li>
-                        <label class="left-label">学历</label><span class="label-value">硕士</span></li>
+                        <label class="left-label">学历</label><span class="label-value">研究生</span>
+					</li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">中国地质大学（北京）</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">中国地质大学（北京）</span>
+					</li>
                     <li>
-                        <label class="left-label">毕业年份</label><span class="label-value">2018</span></li>
+                        <label class="left-label">专业</label><span class="label-value">水利工程</span>
+					</li>
+					<li>
+                        <label class="left-label">研究方向</label><span class="label-value">地下水资源评价及开发利用</span>
+					</li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -47,48 +52,41 @@
                     <li>
                         <label class="left-label">手机</label><span class="label-value">18911767302</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">gubinhua123@163.com</span></li>
-                    <!--<li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
-                    <li>-->
-                        <label class="left-label">Github</label><span class="label-value">github.com/gubinhua</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">gubinhua123@163.com</span></li>                 
                 </ul>
             </div>
             <div class="skill info-unit">
-                <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">技能点</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">技能熟练度</span></h2>
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">CAD/ArcGIS</label>
-                        <progress value="60" max="100"></progress>
+                        <label class="left-label">专业知识</label>
+                        <progress value="75" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">html/css</label>
-                        <progress value="70" max="100"></progress>
+                        <label class="left-label">专业软件</label>
+                        <progress value="75" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Javascript</label>
-                        <progress value="80" max="100"></progress>
+                        <label class="left-label">office</label>
+                        <progress value="85" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">C/C++/NodeJS</label>
-                        <progress value="60" max="100"></progress>
+                        <label class="left-label">英语</label>
+                        <progress value="850" max="100"></progress>
                     </li>
                 </ul>
             </div>
             <div class="stack info-unit">
-                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">储备</span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
                         <label class="left-label">软件</label><span class="label-value">ArcGIS、MapGIS、ModelFlow、CAD</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">C/C++、NodeJS、MongoDB、MySQL</span></li>
-                    </li>
-                    <li>
-                        <label class="left-label">前端</label><span class="label-value">Javascript、css/html</span></li>
-                    </li>
+                        <label class="left-label">计算机语言</label><span class="label-value">C/C++、NodeJS、Javascript、MySQL</span></li>
+                    </li>               
                 </ul>
             </div>
         
@@ -99,13 +97,7 @@
                     <img src="static/image/weixin.png" alt="">
 
                 </div>
-            </div>
-            <!--<div class="remodal remodal-img" data-remodal-id="weixin-modal">
-                <h3>请输入图片URL地址：</h3>
-                <br/>
-                <input type="text" id="weixin-url">
-                <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-            </div>-->
+            </div>           
         </div>
         <div class="main">
             <div class="education info-unit right-list">
@@ -113,16 +105,10 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>中国地质大学（北京）——水利工程（研究生） 2015-2018</h3>
-                        <p>
-                            研究生期间在老师的指导下进行水文经济方面的研究工作。
-                        </p>
+                        <h3>中国地质大学（北京）——水利工程（研究生） 2015-2018</h3>                   
                     </li>
 					 <li>
-                        <h3>防灾科技学院——地下水科学与工程（本科）2011-2015</h3>
-                        <p>
-                            在四年专业的学习中有了较扎实的水文地质专业知识，培养自己的自学能力。课余时间学习C/C++、NodeJS、Javascript、CSS/HTML等编程知识。
-                        </p>
+                        <h3>防灾科技学院——地下水科学与工程（本科）2011-2015</h3                     
                     </li>
                 </ul>
             </div>
@@ -132,24 +118,22 @@
                 <ul class="experience-list">
                     <li>
                         <h3>中国国土资源经济研究院（实习）</h3>
-                        <p>主要查阅相关文献，梳理生态服务方面研究理论，负责生态服务功能价值方面计算等工作。
+                        <p>2016.8-2017.11:主要查阅相关文献，梳理生态服务方面研究理论，负责生态服务功能价值方面计算等工作。
                         </p>
                     </li>
                     <li>
                         <h3>开元博创环境有限公司（实习）</h3>
-                        <p>参与地下水环境影响评价方面的工作，编写环评报告部分内容，利用CAD 绘图等工作。
+                        <p>2014.5-2015.3:参与地下水环境影响评价方面的工作，编写环评报告部分内容，利用CAD 绘图等工作。
                         </p>
                     </li>
 					<li>
-                        <h3>中国地质大学（北京）-学生创业就业指导中心（兼职）</h3>
-                        <p>主要负责协助老师解答同学的就业创业相关问题。
-                        </p>
-                    </li>
-					<li>
-                        <h3>北京圣才教育科技股份有限公司（兼职）</h3>
-                        <p>主要负责本专业书籍重要知识点归纳总结，制作学习笔记。
-                        </p>
-                    </li>
+                        <h3>在校学习期间实习</h3>
+						<p>
+						2013.6：暑期在北京实习基地进行渗水试验、抽水试验，并完成《抽水试验报告》,并根据某厂铬污染进行模拟勘察报告的编写,并完成《某厂铬污染勘察方案》。之后在秦皇岛柳江盆地开展为期25天的野外水文地质调查并完成《柳江盆地水文地质调查报告》。</p>
+						<p>
+						2012.7：暑期在辽宁兴城进行了为期25天的野外地质调查实习。并独立绘制了部分重要地区《地质剖面图》、《调查路线图》、《地层柱状图》、编写实习报告及水源地选取勘察报告等实习成果。</p>
+                        <p>2011.7：暑期在北京周边山区及天津蓟县开展野外地质认识实习。</p>
+                    </li>				               
                 </ul class="experience-list">
             </div>
             <div class="project info-unit right-list">
@@ -158,11 +142,9 @@
                 <ul class="experience-list">
                     <li>
                         <h3>某生物科技有限公司30万吨/年燃料乙醇综合加工项目地下水环境影响评价</h3>
-                        <!-- <p>格尔木水源地经济 </p>-->
                     </li>
 					<li>
                         <h3>格尔木大型水源地经济评价</h3>
-                        <!--<p></p>-->
                     </li>					
                 </ul>
             </div>
@@ -173,7 +155,7 @@
                     <li>
                         <h3>奖项</h3>
                         <p>
-                           2015-2018年研究生期间连续获得国家奖学金； 2011-2015年本科期间获得院长奖学金、一等、二等奖学、英语听力竞赛三等奖、地质技能大赛优秀奖、2011-2012学年“三好学生”荣誉称号、思想政治理论课实践教学主题征文比赛三等奖。
+                           2015-2018年研究生期间连续获得学业奖学金； 2011-2015年本科期间获得院长奖学金、一等、二等奖学、英语听力竞赛三等奖、地质技能大赛优秀奖、2011-2012学年“三好学生”荣誉称号、思想政治理论课实践教学主题征文比赛三等奖。
                         </p>
                     </li> 
                     <li>
@@ -189,7 +171,7 @@
 				<ul>
 					<li>
 						<p>
-						我是一个善于观察思考的人，喜欢向人了解和接触些新鲜东西。对编程有浓厚的兴趣，自学了C/C++、javascript、NodeJS、css/html等编程语言知识，并能运用这些知识帮助 自己和同学解决一些实际问题。</p>
+						我是一个善于观察思考的人，喜欢向人了解和接触些新鲜东西。对编程有浓厚的兴趣，自学了C/C++、javascript、NodeJS、css/html等编程语言知识，并能运用这些知识帮助自己及同学解决一些实际问题。</p>
 					</li>
 					<li>
 				<p>生活中为人友善平易近人，注重团队沟通与协助，大学以来锻炼出了良好的人际交往能力和分析总结能力并将其应用到专业的学习上，取得很好的效果。业余时间喜欢游泳、打网球等锻炼身体。</p></li>
