--- a/gbh/index.html
+++ b/gbh/index.html
@@ -4,12 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>我的简历</title>
-    <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
-    <script src="static/js/script.js"></script>
+    
 </head>
 
 <body>
@@ -73,7 +68,7 @@
                     </li>
                     <li>
                         <label class="left-label">英语</label>
-                        <progress value="850" max="100"></progress>
+                        <progress value="85" max="100"></progress>
                     </li>
                 </ul>
             </div>
@@ -108,7 +103,7 @@
                         <h3>中国地质大学（北京）——水利工程（研究生） 2015-2018</h3>                   
                     </li>
 					 <li>
-                        <h3>防灾科技学院——地下水科学与工程（本科）2011-2015</h3                     
+                        <h3>防灾科技学院（河北）——地下水科学与工程（本科）2011-2015</h3                     
                     </li>
                 </ul>
             </div>
@@ -161,7 +156,7 @@
                     <li>
                         <h3>证书</h3>
                         <p>
-                            计算机一级MS Office 、二级语言程序设计C 等级考试、英语四级、英语六级。
+                            计算机一级MS Office 、二级语言程序设计C等级考试、英语四级、英语六级。
                         </p>
                     </li>                      
             </div>
@@ -174,14 +169,24 @@
 						我是一个善于观察思考的人，喜欢向人了解和接触些新鲜东西。对编程有浓厚的兴趣，自学了C/C++、javascript、NodeJS、css/html等编程语言知识，并能运用这些知识帮助自己及同学解决一些实际问题。</p>
 					</li>
 					<li>
-				<p>生活中为人友善平易近人，注重团队沟通与协助，大学以来锻炼出了良好的人际交往能力和分析总结能力并将其应用到专业的学习上，取得很好的效果。业余时间喜欢游泳、打网球等锻炼身体。</p></li>
-				<li>
-				<p>心态积极乐观，暑期野外工作中虽条件艰苦、工作繁重，但仍抱着学习技能强身健体的心态，每天以充沛的精力投入到实习工作当中。
-                </p></li>
+					    <p>
+						生活中为人友善平易近人，注重团队沟通与协助，大学以来锻炼出了良好的人际交往能力和分析总结能力并将其应用到专业的学习上，取得很好的效果。业余时间喜欢游泳、打网球等锻炼身体。
+						</p>
+					</li>
+					<li>
+						<p>
+						心态积极乐观，暑期野外工作中虽条件艰苦、工作繁重，但仍抱着学习技能强身健体的心态，每天以充沛的精力投入到实习工作当中。					
+						</p>
+					</li>
 				</ul>
             </div>
         </div>
     </div>
 </body>
-
+<link rel="stylesheet" href="static/css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
+<script src="static/js/script.js"></script>
 </html>
