--- a/gbh/index.html
+++ b/gbh/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>我的简历</title>
     <link rel="stylesheet" href="static/css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
+	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
-	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
 	<script src="static/js/script.js"></script>-->
 </head>
@@ -85,7 +85,7 @@
                         <label class="left-label">软件</label><span class="label-value">ArcGIS、MapGIS、ModelFlow、CAD</span></li>
                     </li>
                     <li>
-                        <label class="left-label">计算机语言</label><span class="label-value">C/C++、NodeJS、Javascript、MySQL</span></li>
+                        <label class="left-label">计算机</label><span class="label-value">C/C++、NodeJS、Javascript、office</span></li>
                     </li>               
                 </ul>
             </div>
